# pratical-rust

./: README.md  notes.md
catdex-api/: Cargo.toml  a.js
catdex-api/src/: main.rs
catdex-api/static/: index.html
catdex-yew/: Cargo.toml
catdex-yew/src/: index.css  main.rs
catsay/: Cargo.toml  catfile.txt
catsay-gui/: Cargo.toml
catsay-gui/src/: main.rs
catsay-tui/: Cargo.toml
catsay-tui/src/: main.rs
catsay/src/: main.rs
catsay/tests/: integration_test.rs
gtk-app/: Cargo.toml
gtk-app/src/: main.rs
hello-wasm/: Cargo.toml
hello-yew/: Cargo.toml
hello-yew/src/: main.rs
serveless-hello-world/: Cargo.toml
serveless-hello-world/src/: main.rs
wasm-image-processing/: Cargo.toml  LICENSE_MIT  package-lock.json
wasm-image-processing/client/: index.html  index.js
wasm-image-processing/src/: lib.rs
