[package]
name = "catsay-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
# cursive = "0.20.0"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]
